fixing the navbar, line height too much for gh-pages

--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@
 
 	.navbar li {
 		border-bottom: none;
-		line-height: 130px;
+		line-height: 100px;
 		font-size: 15px;
 		letter-spacing: 1px;
 	}
